--- a/camera_app/web/index.html
+++ b/camera_app/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>slowtok_camera</title>
+  <title>SlowTok</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
